--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@use-it/event-listener": "^0.1.5",
+    "@xstate/inspect": "^0.1.0",
     "@xstate/react": "^0.8.1",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
